# mmpbsa

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
configs/: default_15ns.yaml  ligand_crystal_1x15ns.yaml  ligand_crystal_3x15ns.yaml  ligand_crystal_3x15ns_mmpbsa_bcc.yaml  ligand_crystal_3x5ns.yaml  ligand_crystal_3x5ns_mmpbsa_bcc.yaml  ligand_crystal_5x5ns.yaml  ligand_default_15ns.yaml  peptide_crystal_1x15ns.yaml  peptide_crystal_3x15ns.yaml  peptide_crystal_3x5ns.yaml  peptide_crystal_5x5ns.yaml  smoke_20ps.yaml
docs/: PLAN.md  kras_5xco_mg_pilot.md  kras_6wgn_boltz.md  ligand_tyk2_3x5ns_validation.md  peptide_3x5ns_mmpbsa.md  receptor_cofactors.md  setups.md
mmpbsa/: __init__.py  aggregate.py  analysis.py  benchmark.py  cli.py  common.py  ligand.py  ligand_amber.py  ligand_pipeline.py  md.py  metrics.py  peptide_amber.py  peptide_pipeline.py  postprocess_sweep.py  replica_merge.py  runner.py  visualize.py
scripts/: doctor.sh  run_ligand.sh  run_peptide.sh  run_peptide_3x5ns_gpu4567.sh
tests/: test_core.py
validation/: README.md  __init__.py
validation/kras_5xco/: __init__.py  build_pilot.py  pilot.py  report.py  report_pilot.py
validation/kras_6wgn_boltz/: __init__.py  scaffold.py
validation/ligand_tyk2/: __init__.py  scaffold.py
validation/peptide_3x5ns/: __init__.py  report.py  run_gpu4567.sh
