[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "mmpbsa"
version = "0.1.6"
description = "Unified protein-peptide and protein-small-molecule MD + MMPBSA pipeline"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "click>=8.1",
  "numpy>=1.23",
  "PyYAML>=6.0",
]

[project.optional-dependencies]
test = [
  "pytest>=8.0",
]

[project.scripts]
mmpbsa = "mmpbsa.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["mmpbsa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
